updating config files

--- a/terraform/secret.tfvars.example
+++ b/terraform/secret.tfvars.example
@@ -1,10 +1,6 @@
 # copy this file to secrets.tfvars and add your own secrets
 # never commit the actual secrets.tfvars file
-aws-access-key = "myAWSAccessKey"
-aws-secret-key = "myAWSSecret"
-application-secrets = {
-  "SOLARIS_WEBHOOK_SECRET"   = "my-solaris-webhook-secret"
-  "POSTGRES_DB_KEY"            = "my-db-key"
-  "POSTGRES_DB_SECRET"         = "my-db-secret"
-  "API_KEY_X" = "my-api-key"
-}
+aws-access-key  = "secret"
+aws-secret-key  = "secret"
+master_username = "secret"
+master_password = "secret"
