--- a/conf.toml
+++ b/conf.toml
@@ -1,7 +1,7 @@
 "DbUser" = "postgres"
-"DbPassword" = "changeme"
+"DbPassword" = "sEcure123"
 "DbName" = "app"
 "DbPort" = "5432"
-"DbHost" = "localhost"
-"ListenHost" = "localhost"
+"DbHost" = "apprds.aws.techchallenge.com"
+"ListenHost" = "0.0.0.0"
 "ListenPort" = "3000"
