--- a/conf.toml
+++ b/conf.toml
@@ -1,7 +1,17 @@
-"DbUser" = "postgres"
-"DbPassword" = "sEcure123"
+"DbUser" = "app"
+"DbUsername" = "app"
+"DbPassword"="sEcure123"
 "DbName" = "app"
 "DbPort" = "5432"
 "DbHost" = "apprds.aws.techchallenge.com"
 "ListenHost" = "0.0.0.0"
 "ListenPort" = "3000"
+
+
+#"DbUser" = "postgres"
+#"DbPassword" = "sEcure123"
+#"DbName" = "app"
+#"DbPort" = "5432"
+#"DbHost" = "apprds.aws.techchallenge.com"
+#"ListenHost" = "0.0.0.0"
+#"ListenPort" = "3000"
