fixing conf.toml

--- a/conf.toml
+++ b/conf.toml
@@ -1,7 +1,6 @@
-"DbUser" = "app"
-"DbUsername" = "app"
+"DbUser" = "postgres"
 "DbPassword"="sEcure123"
-"DbName" = "app"
+"DbUsername" = "app"
 "DbPort" = "5432"
 "DbHost" = "apprds.aws.techchallenge.com"
 "ListenHost" = "0.0.0.0"
