--- a/terraform/secret.tfvars.example
+++ b/terraform/secret.tfvars.example
@@ -1,6 +1,6 @@
 # copy this file to secrets.tfvars and add your own secrets
 # never commit the actual secrets.tfvars file
-aws-access-key  = "secret"
-aws-secret-key  = "secret"
-master_username = "secret"
-master_password = "secret"
+aws-access-key  = "example"
+aws-secret-key  = "example"
+db_username     = "example"
+db_password     = "example"
